<resources>
    <string name="app_name">CollapsingToolbar</string>
    <string name="idea">Idea</string>
    <string name="banking">Banking</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="add">Add</string>
    <string name="links">Links</string>
    <string name="wifi">WiFi</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="patents">Patents</string>
</resources>
